# CallBox

./: CMakeLists.txt  LICENSE  README.md  main_rx.cpp  server.cpp  struct.hmm
Arduino/: platformio.ini
docs/: config-file  footer.html  header.html
docs/graphs/: test.mmd
docs/html/: annotated.html  annotated_dup.js  base128_8hpp_source.html  classes.html  classprotouart_1_1serial_1_1SerialBuffer-members.html  classprotouart_1_1serial_1_1SerialBuffer.html  classprotouart_1_1serial_1_1Serializable-members.html  classprotouart_1_1serial_1_1Serializable.html  dir_0a5189dee5fa7eb74d49677611fb5725.html  dir_3426f72b5e4116edad0530908a490fd6.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4f7b36fb0bfdfe16f35b59bd562960a4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_953ac13dcbfb3e70ef6edb1a0956b929.html  dir_98cdb10f369f6a3b9149e010b312bf5d.html  dir_9982052f7ce695d12571567315b2fafa.html  dir_9982052f7ce695d12571567315b2fafa.js  dir_ab21332185897fb5fc8936e844459f8c.html  dir_ab21332185897fb5fc8936e844459f8c.js  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_e328ae2049210d9dcbe3dea2cbf75c9b.html  dir_f017f8d1aea2530cee9690020bbdf1df.html  dir_f017f8d1aea2530cee9690020bbdf1df.js  dir_f9df8ff928e5256cca36c2da2e714eab.html  dir_f9df8ff928e5256cca36c2da2e714eab.js  doxygen-awesome.css  files.html  index.html  index.js  md__home_diego_Programaci_xC3_xB3n_C___ProtocolFinal_docs_markdown_folder_test.html  md__home_diego_Programaci_xC3_xB3n_C___ProtocolFinal_docs_markdown_folder_uwu.html  pages.html  (+9 more)
shared/: protocol.hpp
src/: CMakeLists.txt
src/include/: utils.hpp
src/include/serial/: base128.hpp  primitives.hpp  serial.hpp  serial_buffer.hpp  serializable.hpp
src/src/: utils.cpp
src/src/serial/: primitives.cpp  serial_buffer.cpp
tests/: main.cpp
(+19 files in other folders)
